--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <gatling-maven-plugin.version>2.1.0-SNAPSHOT</gatling-maven-plugin.version>
         <gatling.version>2.1.0-SNAPSHOT</gatling.version>
+	<scala-compiler.version>2.11.2</scala-compiler.version>
     </properties>
 
     <pluginRepositories>
@@ -56,10 +57,15 @@
     </profiles>
 
     <dependencies>
-        <dependency>
+       <dependency>
             <groupId>io.gatling.highcharts</groupId>
             <artifactId>gatling-charts-highcharts</artifactId>
             <version>${gatling.version}</version>
         </dependency>
+	<dependency>
+		<groupId>org.scala-lang</groupId>
+		<artifactId>scala-compiler</artifactId>
+		<version>${scala-compiler.version}</version>
+	</dependency>
     </dependencies>
 </project>
